# pytest_httpx2

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  RELEASING.md  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  change-proposal.md
.github/workflows/: publish.yml  release-please.yml  release.yml  test.yml
pytest_httpx/: version.py
pytest_httpx2/: __init__.py  _httpx_internals.py  _httpx_mock.py  _options.py  _pretty_print.py  _request_matcher.py  version.py
tests/: test_httpx_async.py  test_httpx_sync.py  test_plugin.py
