[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-httpx2"
description = "Send responses to httpx2."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    { name = "Colin Bounouar", email = "github.coping055@passinbox.com" },
]
maintainers = [
    { name = "Colin Bounouar", email = "github.coping055@passinbox.com" },
]
keywords = [
    "httpx2",
    "pytest",
    "testing",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Build Tools",
    "Typing :: Typed",
]
dependencies = [
    "httpx2==2.*",
    "pytest==9.*",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/angryfoxx/pytest_httpx2"
Documentation = "https://github.com/angryfoxx/pytest_httpx2#readme"
Repository = "https://github.com/angryfoxx/pytest_httpx2"
Changelog = "https://github.com/angryfoxx/pytest_httpx2/blob/master/CHANGELOG.md"
Issues = "https://github.com/angryfoxx/pytest_httpx2/issues"

[project.optional-dependencies]
testing = [
    # Used to check coverage
    "pytest-cov==7.*",
    # Used to run async tests
    "pytest-asyncio==1.*",
]

[project.entry-points.pytest11]
pytest_httpx2 = "pytest_httpx2"

[tool.setuptools.packages.find]
where = ["."]
include = ["pytest_httpx2*"]

[tool.setuptools.dynamic]
version = {attr = "pytest_httpx2.version.__version__"}

[tool.pytest]
asyncio_mode = "auto"
addopts = ["--cov=pytest_httpx2", "--runpytest=subprocess"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.coverage.run]
patch = ["subprocess"]
